src/test/deca/syntax/invalid/filenotfound.deca
// Description:
//    File not found
//
// Resultats:
//    ok
//
// Historique:
//    cree le 11/01/2023

#include "h.dcah"

